# NAC-ABE

./: CMakeLists.txt  README.md  install_nac_abe_stack.sh
src/: consumer.cpp  consumer.hpp
src/algo/: abe-support.cpp
tests/: CMakeLists.txt
tests/unit-tests/: abe-support.t.cpp  example-trust-anchor.cert  integrated-test.t.cpp
